--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -2,65 +2,80 @@
 
 - title: "Memorial Sloan Kettering Cancer Center"
   url: http://www.mskcc.org
-  excerpt: 
+  excerpt: One of the first, enterprise-level Drupal 8 websites. Integrated custom prototype with Drupal theme using Grunt automation.
   image: portfolio/mskcc-thumb.png
+  date: 2015
 
-- title: "NBCU  Telemundo"
-  url: 
-  excerpt: 
+- title: "Telemundo"
+  subtitle: NBC Universal
+  url: http://www.telemundo.com/
+  excerpt: Led a large international team of front-end developers in redesign. Migrated custom prototyping tool to Pattern Lab during development.
   image: portfolio/telemundo-thumb.png
+  date: 2014
 
-- title: Time Inc. - AllYou
+- title: AllYou
+  subtitle: Time Inc.
   url:
-  excerpt:
+  excerpt: Migrated magazine sites from proprietary CMS to open source Drupal.
   image: portfolio/allyou-thumb.png
 
-- title: Time Inc. - Sunset
+- title: Sunset
+  subtitle: Time Inc.
   url:
-  excerpt:
+  excerpt: Migrated magazine sites from proprietary CMS to open source Drupal.
   image: portfolio/sunset-thumb.png
 
-- title: Time Inc - Southern Living
+- title: Southern Living
+  subtitle: Time Inc.
   url:
-  excerpt:
+  excerpt: Migrated magazine sites from proprietary CMS to open source Drupal.
   image: portfolio/southernliving-thumb.png
 
-- title: Time Inc - Cooking Light
+- title: Cooking Light
+  subtitle: Time Inc.
   url:
-  excerpt:
+  excerpt: Migrated magazine sites from proprietary CMS to open source Drupal.
   image: portfolio/cookinglight-thumb.png
 
-- title: Time Inc - Coastal Living
+- title: Coastal Living
+  subtitle: Time Inc.
   url:
-  excerpt:
+  excerpt: Migrated magazine sites from proprietary CMS to open source Drupal.
   image: portfolio/coastalliving-thumb.png
 
 - title: Deptartment of Energy
-  url:
-  excerpt:
+  url: https://www.phase2technology.com/the-department-of-energy-and-their-mobile-first-strategy/
+  excerpt: One of the first federal agencies to launch a responsive web platform. 
   image: portfolio/doe-thumb.png
+  date: 2013
 
 - title: Robin Hood
   url:
   excerpt:
   image: portfolio/robinhood.png
+  date: 2011
   
 - title: archive1887
+  subtitle: Sony Music
   url:
   excerpt:
   image: portfolio/archive1887.png
+  date: 2010
   
 - title: Augustana
+  subtitle: Sony Music
   url:
   excerpt:
   image: portfolio/augustana.jpg
 
 - title: Avril Lavigne
+  subtitle: Sony Music
   url:
   excerpt:
   image: portfolio/avril-lavigne.png
   
 - title: Britney Spears
+  subtitle: Sony Music
   url:
   excerpt:
   image: portfolio/britney.jpg
@@ -76,46 +91,66 @@
   image: /portfolio/calvary.jpg
   
 - title: David Cook
+  subtitle: Sony Music
   url:
   excerpt:
   image: portfolio/david-cook.png
+  date: 2011
   
 - title: Isaac Russell
+  subtitle: Sony Music
   url:
   excerpt:
   image: portfolio/isaac-russell.png
+  date: 2010
 
 - title: Kelly Clarkson
+  subtitle: Sony Music
   url:
   excerpt:
   image: portfolio/kellyclarkson.jpg
+  date: 2011
   
 - title: Mike Posner
+  subtitle: Sony Music
   url:
   excerpt:
   image: portfolio/mike-posner.png
+  date: 2010
 
 - title: Simon and Garfunkel
+  subtitle: Sony Music
   url:
   excerpt:
   image: portfolio/sandg.jpg
 
 - title: Say Anything
+  subtitle: Sony Music
   url:
   excerpt:
   image: portfolio/say-anything.png
+  date: 2009
   
 - title: Street Swell
   url:
   excerpt:
   image: portfolio/streetswell.png
+  date: 2012
   
 - title: University at Buffalo
   url:
-  excerpt:
+  excerpt: Complete overhaul of the information architecture and organization of the site as well as coordinating graphic redesign.
   image: portfolio/ub.jpg
+  date: 2009
 
 - title: Georgia.gov
   url:
-  excerpt:
+  excerpt: Helped complete a handful of custom themes for a Drupal platform to be used by many state agencies. Refactored so much code that I wound up deleting more lines of code than I added.
   image: portfolio/georgia-thumb.png
+  date: 2012
+  
+- title: Storyhunter.tv
+  url: http://storyhunter.tv
+  excerpt: Worked with tech publishing startup redesigning and adding features to platform for freelance journalists and filmmakers.
+  image: portfolio/storyhunter-thumb.png
+  date: 2012-2013
