a bunch of changes

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: nature-q-c-120-120-3.jpg
 # 400x250 px default teaser image used in image archive grid
 teaser: nature-q-c-800-500-8.jpg
 locale: NYC, NY
-# url: http://bradwade.com
+#url: https://dl.dropboxusercontent.com/u/1105391/bradwade-jekyll/
 
 # Jekyll configuration
 
