--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,9 +3,14 @@
 - title: portfolio
   url: /portfolio
   excerpt: Some of my sites and clients.
-  image: animals-q-g-300-200-1.jpg
+  image: nyc-300-200.jpg
 
 - title: lab
   url: /lab
   excerpt: Documentation and notes on front-end web development and Drupal.
-  image: animals-q-g-300-200-4.jpg
+  image: lock-300-200.jpg
+
+- title: about
+  url: /about
+  excerpt: About Brad Wade
+  image: Wade124-300-200.jpg
