--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ owner:
   google:
     ad-client:
     ad-slot:
-  bio: Brad Wade is a front-end web developer, Drupal specialist, and a musician living in New York City.
+  bio: Brad Wade is a front-end web developer, Drupal specialist, and musician living in New York City.
   avatar: bradwade-bio-photo.jpg # 160x160 px image for author byline
   disqus-shortname: project47
 
